--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sanidhya.m_xpress">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,16 +10,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="android.app.default_searchable"
+                android:value=".MainActivity" />
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/location_searchable"/>
+
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".IssueActivity" />
         <activity android:name=".AddIssueActivity"></activity>
+
+        <provider android:name="com.example.sanidhya.m_xpress.LocationProvider"
+            android:authorities="com.example.sanidhya.m_xpress"
+            android:exported="false"
+            android:enabled="true" >
+        </provider>
+
+
     </application>
 
 </manifest>
