--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sanidhya.m_xpress">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:name="android.hardware.camera"
+
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,30 +18,47 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.geo.API_KEY" -->
+        <!-- android:value="AIzaSyCqfKvoWHI5zvJwSLygeJvoebACZYkftUQ"/> -->
+        <activity
+            android:name=".MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data android:name="android.app.default_searchable"
-                android:value=".MainActivity" />
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/location_searchable"/>
-
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".IssueActivity" />
-        <activity android:name=".AddIssueActivity"></activity>
+        <activity android:name=".AddIssueActivity" />
 
-        <provider android:name="com.example.sanidhya.m_xpress.LocationProvider"
+        <provider
+            android:name=".LocationProvider"
             android:authorities="com.example.sanidhya.m_xpress"
-            android:exported="false"
-            android:enabled="true" >
-        </provider>
+            android:enabled="true"
+            android:exported="false" />
 
+        <activity android:name=".MapFeedActivity" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".MapFeedActivity"></activity>
     </application>
 
 </manifest>
